--- a/css/style.css
+++ b/css/style.css
@@ -944,8 +944,9 @@ max-height:110px;
 }
 
 .sf-team{
-	float: left;
-    width: 100%;
+  float: left;
+  width: 35rem;
+  margin-left: 38rem;
 }
 .sf-team .thumb {
     float: left;
