--- a/css/responsive.css
+++ b/css/responsive.css
@@ -230,7 +230,8 @@
 		height: 65px;
 		line-height: 65px;
 		font-size: 18px;
-		display:none;
+		left: 198px;
+		/* display:none; */
 	}
 	.offer-item div{
 		width: 70%;
@@ -325,7 +326,8 @@
 		height: 65px;
 		line-height: 65px;
 		font-size: 18px;
-		display:none;
+		left: 198px;
+		/* display:none; */
 	}
 	.offer-item div{
 		width: 100%;
