--- a/css/responsive.css
+++ b/css/responsive.css
@@ -231,6 +231,7 @@
 		line-height: 65px;
 		font-size: 18px;
 		left: 198px;
+		background: #fff;
 		/* display:none; */
 	}
 	.offer-item div{
@@ -327,6 +328,7 @@
 		line-height: 65px;
 		font-size: 18px;
 		left: 198px;
+		background: #fff;
 		/* display:none; */
 	}
 	.offer-item div{
