--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,12 @@ body::-webkit-scrollbar-thumb {
   border: 3px solid #fff;  /* creates padding around scroll thumb */
 }
 
+#menu {
+  background-image:-moz-radial-gradient(center, ellipse cover, rgba(0, 0, 0, 0.57) 0%,rgba(0, 0, 0, 0.87) 100%), url(..images/banner5.jpg);
+  background-image:-webkit-radial-gradient(center, ellipse cover, rgba(0, 0, 0, 0.57) 0%,rgba(0, 0, 0, 0.87) 100%), url(../images/banner5.jpg);
+  background-image:radial-gradient(ellipse at center, rgba(0, 0, 0, 0.57) 0%,rgba(0, 0, 0, 0.87) 100%), url(../images/banner5.jpg);
+}
+
 a {
     color: #1f1f1f;
     text-decoration: none !important;
