--- a/css/colors/moderate-green.css
+++ b/css/colors/moderate-green.css
@@ -1,21 +1,21 @@
 .navbar-default .navbar-toggle .icon-bar{
-	background-color: #8dc63f;
+	background-color: #008000;
 }
 .main-menu .navbar-default .navbar-nav .active a{
-	color: #8dc63f;
+	color: #008000;
 }
 .main-menu nav li a::after {
-    background: #8dc63f;
+    background: #008000;
 }
 .typer{
-	color: #8dc63f !important;
+	color: #008000 !important;
 }
 .banner-text h2{
-	color: #8dc63f
+	color: #008000
 }
 .book-btn a{
-	background: #8dc63f;
-	border: 3px solid #8dc63f;
+	background: #008000;
+	border: 3px solid #008000;
 }
 .book-btn a:hover{
 	border: 3px solid #5f9317;
@@ -24,67 +24,67 @@
 	background:#5f9317;
 }
 .block-title{
-	color: #8dc63f;
+	color: #008000;
 }
 .item-type-zoom .item-hover:hover::before{
 	background: rgba(141, 198, 63, 0.5);
 }
 .special-box .owl-theme .owl-controls .owl-page.active span{
-	background: #8dc63f;
+	background: #008000;
 }
 .offer-item div h3{
-	color: #8dc63f;
+	color: #008000;
 }
 .tab-menu .is-active{
-	background: #8dc63f;
+	background: #008000;
 }
 .tab-menu .slick-arrow.slick-prev{
-	background: #8dc63f url(../../images/back.png) no-repeat center;
+	background: #008000 url(../../images/back.png) no-repeat center;
 	background-position: 2px 4px;
 }
 .tab-menu .slick-arrow.slick-next{
-	background: #8dc63f url(../../images/next.png) no-repeat center;
+	background: #008000 url(../../images/next.png) no-repeat center;
 	background-position: 7px 4px;
 }
 .tab-menu .slick-arrow.slick-prev:hover{
-	background:#8dc63f url(../../images/back_hover.png) no-repeat center;
+	background:#008000 url(../../images/back_hover.png) no-repeat center;
 	background-position: 2px 4px;
 }
 .tab-menu .slick-arrow.slick-next:hover{
-	background:#8dc63f url(../../images/next_hover.png) no-repeat center;
+	background:#008000 url(../../images/next_hover.png) no-repeat center;
 	background-position: 7px 4px;
 }
 
 .offer-item .offer-price{
-	border: 1px solid #8dc63f;
+	border: 1px solid #008000;
 }
 .sf-team:hover .text-col{
-	background-color: #8dc63f;
+	background-color: #008000;
 }
 .gal-item a::after{
 	background-color: rgba(141, 198, 63, 0.75);
 }
 .overlay i:hover{
-	border: 1px solid #8dc63f;
-	color: #8dc63f;
+	border: 1px solid #008000;
+	color: #008000;
 }
 .blog-btn-v a{
-	background: #8dc63f;
-	border: 3px solid #8dc63f;
+	background: #008000;
+	border: 3px solid #008000;
 }
 .blog-btn-v a:hover{
 	border: 3px solid #5f9317;
 }
 .book-srv a{
-	background: #8dc63f;
-	border: 3px solid #8dc63f;
+	background: #008000;
+	border: 3px solid #008000;
 }
 .book-srv a:hover{
 	border: 3px solid #5f9317;
 }
 .reserve-book-btn button{
-	background: #8dc63f;
-	border: 3px solid #8dc63f;
+	background: #008000;
+	border: 3px solid #008000;
 }
 .reserve-book-btn button:hover a{
 	color:#000000;
@@ -94,17 +94,17 @@
 }
 
 .panel-pricing .panel-heading{
-	background: #8dc63f;;
+	background: #008000;;
 }
 .panel-pricing{
-	border: 1px solid #8dc63f;
+	border: 1px solid #008000;
 }
 .panel-body p strong span{
-	color: #8dc63f;
+	color: #008000;
 }
 .pricing-main .panel-footer a{
-	background: #8dc63f;
-	border: 3px solid #8dc63f;
+	background: #008000;
+	border: 3px solid #008000;
 }
 .pricing-main .panel-footer a:hover{
 	border: 3px solid #5f9317;
@@ -112,37 +112,37 @@
 
 
 .footer-news form a{
-	background: #8dc63f;
+	background: #008000;
 }
 .footer-news form a:hover{
-	border: 2px dotted #8dc63f;
+	border: 2px dotted #008000;
 }
 .footer-box-a h3{
-	color: #8dc63f;
+	color: #008000;
 }
 .footer-box-b h3{
-	color: #8dc63f;
+	color: #008000;
 }
 .footer-box-c h3{
-	color: #8dc63f;
+	color: #008000;
 }
 .footer-box-d h3{
-	color: #8dc63f;
+	color: #008000;
 }
 .footer-box-c p a:hover{
-	color: #8dc63f;
+	color: #008000;
 }
 .footer-box-b ul li a:hover{
-	color: #8dc63f;
+	color: #008000;
 }
 
 
 .footer-box .socials-box a:hover .social-circle-border{
-	color: #8dc63f;
+	color: #008000;
 }
 
 .footer-box-c p i{
-	color: #8dc63f;
+	color: #008000;
 }
 
 .copyright-main{
@@ -150,5 +150,5 @@
 }
 
 #color-panel a.panel-button:hover{
-	color: #8dc63f;		
+	color: #008000;
 }
