--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,9 @@ body::-webkit-scrollbar-thumb {
 #btn-assinar {
   background-color: #008000;
   color: #fff;
-  border-radius: 20px;
+  border-radius: 8px;
+  border: none;
+  padding: 1%;
 }
 
 #menu {
